fix settings layout on ios

--- a/src/components/Settings/Settings.module.css
+++ b/src/components/Settings/Settings.module.css
@@ -1,10 +1,10 @@
 .root {
   display: flex;
   flex-direction: column;
-  gap: 10%;
-  padding-top: 10%;
+  justify-content: space-between;
+  padding-top: 20px;
   align-items: center;
-  height: 86%;
+  height: 80%;
 }
 
 .section {
